updating startup script