@@ -5,7 +5,7 @@ setupJava(){
     export PATH=$PATH:$JAVA_HOME/bin/
     export M2_HOME=/usr/share/maven/
     export M2=$M2_HOME
-    export MAVEN_OPTS='-Xmx512m -XX:MaxPermSize=512m -Xms256m'
+    export MAVEN_OPTS='-Xmx768m -Xms512m'
     export PATH=$M2:$PATH
 }
 
@@ -21,8 +21,8 @@ fi
 setupJava
 
 
-export JAVA_MAX_MEM=640M
-export JAVA_MAX_PERM_MEM=448M
+export JAVA_MAX_MEM=768M
+export JAVA_MAX_PERM_MEM=640M
 
 # start ODL
 cd $DIR/l2switch/distribution/karaf/target/assembly
